k8s/dotnet-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api-service
  namespace: argocd
spec:
  selector:
    app: dotnet-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
